--- a/src/global.scss
+++ b/src/global.scss
@@ -1,12 +1,7 @@
 html,
 body,
-#root {
+#app {
   height: 100%;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .article-content {
